role-service/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: role-service
  namespace: test
  labels:
    app: role-service
    type: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: role-service
  template:
    metadata:
      labels:
        app: role-service
    spec:
      containers:
      - name: role-service
        image: alhanouf1/role-service
        ports:
        - containerPort: 80
