role-service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: test
   namespace: test
   annotations:
      ingress.kubernetes.io/ssl-redirect: "false"
spec:
   rules:
   - http:
      paths:
      - path: /role
        backend:
           serviceName: role-service
           servicePort: 80
